Add the ability to add a new album.

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -24,6 +24,21 @@ body {
 /* -------------------------  End navbar ------------------------- */
 
 
+#newalbumform {
+	margin-top: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* -------------------------  Footer ------------------------- */
 .footer {
