Add update album option (not finished yet).

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -24,19 +24,21 @@ body {
 /* -------------------------  End navbar ------------------------- */
 
 
+
+
 #newalbumform {
 	margin-top: 50px;
 }
 
+/* Font awesome icons */
+i.far {
+/*     margin-top: 50%;     */
+    color:#2fad0c;
+}
 
-
-
-
-
-
-
-
-
+i.fas {
+    color: #fc0390;
+}
 
 
 
