--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1,3 +1,4 @@
+/* -------------------------  Generics ------------------------- */
 html {
 	position: relative;
 	min-height: 100%;
@@ -8,6 +9,9 @@ body {
     margin-bottom: 75px;
     font-family: 'Comfortaa', cursive;
 }
+/* -------------------------  End generics ------------------------- */
+
+
 
 /* -------------------------  Navbar ------------------------- */
 .navbar {
@@ -25,20 +29,29 @@ body {
 
 
 
-
+/* -------------------------  Others ------------------------- */
 #newalbumform {
 	margin-top: 50px;
 }
 
 /* Font awesome icons */
 i.far {
-/*     margin-top: 50%;     */
-    color:#2fad0c;
+    color:#bbd113;
 }
 
 i.fas {
-    color: #fc0390;
+    color: #a60c0c;
 }
+
+.table > tbody > tr > td {
+     vertical-align: middle;
+     padding-left: 20px;
+}
+
+#formOptionButtons {
+    padding-left: 25px;
+}
+/* -------------------------  End others ------------------------- */
 
 
 
