Fix repopulate form fields after entered existing album.

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -51,6 +51,11 @@ i.fas {
 #formOptionButtons {
     padding-left: 25px;
 }
+
+#workinprogress {
+    font-style: italic;
+    color: #fca103;    
+}
 /* -------------------------  End others ------------------------- */
 
 
