Add Java Bean validations.

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -56,6 +56,12 @@ i.fas {
     font-style: italic;
     color: #fca103;    
 }
+
+.formRestriction {
+    font-style: italic;
+    color: #fca103;
+}
+
 /* -------------------------  End others ------------------------- */
 
 
