Fix Java Bean validations, and include link to GitHub repo.
Last commit before tag 4.0.0.

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -62,6 +62,12 @@ i.fas {
     color: #fca103;
 }
 
+#githublogo {
+  margin-left: 20px;  
+  width: 5%;
+  height: auto;    
+}
+
 /* -------------------------  End others ------------------------- */
 
 
