Add BO albums management (approve/disaprove and delete).

--- a/src/main/webapp/css/own-dashboard-styles.css
+++ b/src/main/webapp/css/own-dashboard-styles.css
@@ -25,3 +25,13 @@
 .profile-table-details {
 	border-bottom: 1px solid #dee2e6;
 }
+
+.formManageButtons {
+	margin: auto;
+	width: 50%;
+}
+
+.album-approved-icon {
+	margin: auto;
+	width: 50%;
+}
